# yaver.io

./: .gitignore  .vercelignore  .yaver-sync-files.txt  ACCESS_LAYER_HANDOFF.md  AGENTS.md  AI_ARCH.md  AUTORUN-BRIEF.md  AUTORUN-HANDOFF.md  AUTORUN_TASK.md  BEAM_PRO_DEV.md  CI.md  CLAUDE.md  CLOUDFLARE.md  CODING_AGENT_CHANGE_FROM_MOBILE_APP_CHAT.md  CONTRIBUTING.md  DEMO_VIDEO_HANDOFF.md  DESKTOP_UNITY_YAVER_FEEDBACK_SDK_AUIDT.md  DOWNLOADS.md  FEEDBACK_SDK.md  GO_YAVER_MOBILE_DISCOVERY.md  HANDOFF-device-pairing-onboarding-2026-06-01.md  HERMES_RELOAD_STATUS.md  HETZNER_KICK_OFF.md  HETZNER_REMAINED.md  IOS_SIMULATOR.md  IOT_REMAINED.md  LICENSE  LICENSING.md  MIGRATION.md  MISSINGS_FEEDBACK_SDK.md  MOBILE_APP_PERMS_POLICY_FULLSTACK.md  MOBILE_BACKEND_EXPORT.md  MOBILE_HEADLESS.md  MOBILE_TASKS_AUDIT_HANDOFF.md  MOBILE_WORKER.md  PHONE_EXPORT_PIPELINE.md  REACT_HOSTING_LIBS.md  README.md  REGISTRATIONS.md  RELOAD_OPTIMIZATIONS.md  (+44 more)
.github/: CODEOWNERS
.yaver/: machine.md  publish.yaml
backend/: .env.example  cleanup-user.mjs  convex.json  migrate-user-bundle.mjs  package-lock.json  package.json
ci/: README.md  REMAINED.md
cli/: package-lock.json  package.json  sdk-manifest.json  yaver-cli-1.99.16.tgz
cloud/: .env.example  Caddyfile  Dockerfile  README.md  deploy.sh  docker-compose.yml
cloud-image/: README.md
demo/: README.md
demo-videos/: README.md
docs/: FGS_VIDEO_ROOT_CAUSE_AND_PLAN.md  MAGARA_STUDIO_AND_FGS_VIDEO_ANALYSIS.md  README.md  REMOTE_REDROID_AI_TESTING_ANALYSIS.md  REMOTE_TEST_RUNNER_DESIGN.md  SANDBOX_INSTALL_PROOT_ROOTFS_NPM_DEEP_DIVE.md  YAVER_CRITICAL_FAILURE_PROGRAM.md  agentic-coding-sandbox.md  android-dynamic-native-modules.md  android-local-hermes-reload.md  antigravity-continue-windows-ollama-runbook.md  auto_dev_remained.md  autorun-remote-handoff.md  autotest-spec.md  c-agent-architecture.md  c-agent-domains.md  c-agent-robotics-guide.md  c-agent-vendor-modules.md  coding-agent-change-from-mobile-app-chat.md  coding-agent-on-device.md  default-install-protection.md  deploy-all-generic.md  deployment-audit-2026-04-23.md  develop-for-machine-split-brain.md  development-studio-setup.md  dynamic-host-runtime.md  edge-machine-pi-talos.md  ev-charging-operator.md  gpu-rental-orchestration.md  handoff-connectivity-2026-07-13.md  headless-clients.md  hermes-secondary-reload-optimization.md  hetzner-shared-owner-runbook.md  host_guest_borrowed_runner_spec.md  host_share_connectivity_robustness_report.md  linux-remote-runtime-audit.md  local-screen-monitor.md  mac-mini-remote-worker.md  machine-removal-spec.md  machine-testing.md  (+165 more)
download/: README.md  package.json  wrangler.toml
e2e/: .gitignore  figma-ai.mjs  figma-smoke.mjs  global-setup.ts  global-teardown.ts  mw-beta-full.cjs  mw-beta.cjs  mw-create.cjs  mw-explore.cjs  mw-explore2.cjs  mw-full.cjs  mw-full2.cjs  mw-record.cjs  package-lock.json  package.json  playwright.config.ts  rn-browser-loop.mjs  rn-browser-suite.sh  rn-vibe-loop.mjs  sandbox-deep-test.cjs  sandbox-video.cjs  tsconfig.json  yaver-lane-loop.sh
embedded/c-agent/: .gitignore  CMakeLists.txt  DEMO.md  FIRMWARE_ARCHITECTURE.md  README.md  build.sh
embedded/c-agent/brain/: README.md  body.go  body_test.go  cbor.go  cbor_test.go  frame.go  frame_test.go  go.mod  session.go  session_test.go  transport.go  transport_test.go
embedded/c-agent/cmake/: yaver-cagent-config.in  yaver-cagent.pc.in  yaver_cagentConfig.cmake.in
embedded/c-agent/core/: CMakeLists.txt
embedded/c-agent/core/include/yvr/: body.h  cbor.h  frame.h  status.h  types.h
embedded/c-agent/core/src/: body.c  cbor.c  frame.c  status.c
embedded/c-agent/examples/cmake-find-package/: CMakeLists.txt  main.c
embedded/c-agent/examples/pkg-config/: Makefile  main.c
embedded/c-agent/examples/plain-makefile/: Makefile  main.c
embedded/c-agent/host/: CMakeLists.txt
embedded/c-agent/host/include/yvr/: event.h  host.h  manifest.h  module.h  session.h
embedded/c-agent/host/src/: host.c  host_stub.c  session.c
embedded/c-agent/packaging/buildroot/: Config.in  README.md  yaver-cagent.mk
embedded/c-agent/packaging/openwrt/: Makefile  README.md
embedded/c-agent/packaging/yocto/: README.md  yaver-cagent_0.0.1.bb
embedded/c-agent/probes/: CMakeLists.txt
embedded/c-agent/probes/include/yvr/: probes.h
embedded/c-agent/probes/src/: klipper_status.c  wifi_client_count.c
embedded/c-agent/tests/: CMakeLists.txt  test_body.c  test_cbor.c  test_frame.c  test_host.c  test_probes.c  test_session.c  test_tcp.c
embedded/c-agent/transports/: CMakeLists.txt
embedded/c-agent/transports/include/yvr/: tcp.h
embedded/c-agent/transports/src/: tcp.c
gateway/: README.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
hardware/: README.md
mentra-miniapp/: .env.example  .gitignore  package.json  tsconfig.json
mobile/: app.json  firebase.json  metro.config.js  package-lock.json  package.json  sdk-manifest.json  tsconfig.json
mobile-headless/: README.md  bunfig.toml  package.json  tsconfig.json
pi-image/: README.md
relay/: .gitignore  README.md  abuse_guard.go  abuse_guard_test.go  admin_auth_test.go  bandwidth.go  beta_signal.go  beta_signal_test.go  bus.go  bus_test.go  convex_presence.go  convex_validation_test.go  counting_writer.go  counting_writer_test.go  deviceid_validation_test.go  docker-compose.yml  expose_proxy_test.go  frame_headers.go  frame_headers_test.go  go.mod  go.sum  main.go  mesh.go  password_rotation_test.go  protocol.go  relay_stream_wire.go  remaining_bytes_test.go  selftest.go  selftest_test.go  server.go  server_collision_test.go  sigauth.go  sigauth_cutover_test.go  sigauth_test.go  tls_persist.go  tunnel.go  tunnel_liveness.go  turn.go  turn_test.go  webview_cookie.go  (+1 more)
scripts/: add-liveactivity-ios-target.js  add-mesh-ios-target.js  add-watch-ios-target.js  asc-max-build.py  autorun-preflight.sh  bootstrap-android-signing.sh  browser-webrtc-color-vibe-smoke.mjs  build-android-proot-arm64.sh  build-android-proot-x86_64.sh  build-android-sandbox.sh  (+111 more)
sdk/python/: LICENSE  README.md  pyproject.toml  yaver.py
(+6056 files in other folders)
