[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yaver"
version = "0.3.1"
description = "Yaver SDK — embed Yaver's local-first agent runtime into your Python apps"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
authors = [
    {name = "Kivanc Cakmak", email = "kivanc@yaver.io"},
]
keywords = ["yaver", "ai", "agent", "p2p", "local-first", "developer-runtime", "sdk", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://yaver.io"
Repository = "https://github.com/kivanccakmak/yaver.io"
Documentation = "https://github.com/kivanccakmak/yaver.io/tree/main/sdk/python"

[tool.setuptools]
py-modules = ["yaver"]
